# invetario-auto-back

./: Cargo.toml  README.md
data/: parts.json
src/: main.rs
src/controllers/: create_parts.rs  mod.rs  parts_controller.rs
src/models/: mod.rs  parts.rs  pieza.rs
src/repositories/: mod.rs  parts_repository.rs
src/services/: mod.rs  parts_service.rs
